# SlimeAdventures

./: .gitignore  CMakeLists.txt  README.md
data/appdata/: bridge_enemies.sles  main_enemies.sles  player.sles  river_enemies.sles
data/level/: dangerous.tsx  decoration.tsx  map.tmx  solid.tsx
src/: Axeman.cpp  Axeman.hpp  Background.cpp  Background.hpp  Bullet.cpp  Bullet.hpp  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  Enemies.cpp  Enemies.hpp  Enemy.cpp  Enemy.hpp  FPSCounter.cpp  FPSCounter.hpp  Gunslinger.cpp  Gunslinger.hpp  LinkManager.cpp  LinkManager.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Rect.cpp  Rect.hpp  Skeleton.cpp  Skeleton.hpp  Soundtrack.cpp  Soundtrack.hpp  main.cpp
